2013-03-04  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add warning when extracting by annotation types from un-annotated files

2013-02-28  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Remove unnecessary outputs when loading data

2013-02-15  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add more safe-guard function in R source codes
	* Merge gene regions when reading meta-analysis results

2013-01-31  Xiaowei Zhan  <zhanxw@host10-41.sph.umich.edu>

	* Add MacOS compatability
	* Sort extract locations for meta-analysis
	* Add vignette

2013-01-03  Xiaowei Zhan  <zhanxw@fantasia.sph.umich.edu>

	* Add Windows compatability

2012-12-16  Xiaowei Zhan  <zhanxw@fantasia.sph.umich.edu>

	* Support new format of meta-analysis outputs
	* Add file existence check

2012-10-25  Xiaowei Zhan  <zhanxw@fantasia.sph.umich.edu>

	* Stablize library by roviding input file checks

2012-08-29  Xiaowei Zhan  <zhanxw@host10-41.sph.umich.edu>

	* Support Solaris 10 (after removing __restrict keyword, fixing macros)
	* Support Fedora (include <regex.h> instead of <pcreposix.h>)
	* Update zlib related codes to comply to zlib license (from personal email with Mark Adler)
	* License under GPL

2012-08-28  Xiaowei Zhan  <zhanxw@gmail.com>

	* Add tests data under inst/vcf
	* Add test scripts under tests/
	* Enable PCRE for Linux and provide our own simple Regex class for Mac and Windows

2012-08-27  Xiaowei Zhan  <zhanxw@gmail.com>

	* Update description of license
	* Remove Makevars

2012-08-26  Xiaowei Zhan  <zhanxw@gmail.com>

	* Update licenses
	* Support Windows and Mac

