@@ -1,8 +1,8 @@
 Package: vcf2geno
 Type: Package
 Title: Efficiently Read Variant Call Format (VCF) into R
-Version: 1.9
-Date: 2013-3-4
+Version: 2.0
+Date: 2013-3-12
 Author: Xiaowei Zhan <zhanxw@gmail.com> and Dajiang Liu
         <dajiang.liu@gmail.com>, with contributions of Jean-loup Gailly
         <jloup@gzip.org> and Mark Adler
@@ -29,7 +29,7 @@ Copyright: We have used the following software and made minimal
 License: GPL
 URL: http://zhanxw.com/vcf2geno
 Collate: 'vcf2geno.R'
-Packaged: 2013-03-05 03:41:37 UTC; zhanxw
+Packaged: 2013-03-14 20:27:03 UTC; zhanxw
 Repository: CRAN
-Date/Publication: 2013-03-05 06:46:50
+Date/Publication: 2013-03-15 07:41:29
 NeedsCompilation: yes
