@@ -1,2 +1,3 @@
 exportPattern("^[^\\.]")
 useDynLib(vcf2geno)
+importFrom(utils)
